k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gsprestapi
    app.kubernetes.io/name: gsprestapi
    app.kubernetes.io/version: latest
  name: gsprestapi
  namespace: gsprestapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gsprestapi
      app.kubernetes.io/name: gsprestapi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: gsprestapi
        app.kubernetes.io/name: gsprestapi
    spec:
      containers:
      - env:
        - name: ALLOWED_HOSTS
          value: gsprestapi.staging.aquaveo.com localhost 127.0.0.1
        image: docker.aquaveo.com/geoglows/gsp_rest_api:latest
        imagePullPolicy: Always
        name: gsprestapi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        readinessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
              - name: HOST
                value: localhost
          timeoutSeconds: 15
          initialDelaySeconds: 30
      imagePullSecrets:
      - name: gitlab-registry
      restartPolicy: Always
